Devops/Internship-Project/Task-4-Solution/kub_manifest/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o ../kub_manifest/
    kompose.image-pull-secret: regcred
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o ../kub_manifest/
        kompose.image-pull-secret: regcred
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: realestate_db
            - name: POSTGRES_PASSWORD
              value: "123456"
            - name: POSTGRES_USER
              value: team01realestate
          image: postgres:16
          name: db
          ports:
            - containerPort: 5432
              protocol: TCP
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
