Devops/Internship-Project/Task-4-Solution/kub_manifest/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o ../kub_manifest/
    kompose.image-pull-secret: regcred
    kompose.service.expose: realestate.techprodevops.com
    kompose.service.nodeport.port: "30001"
    kompose.service.type: nodeport
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o ../kub_manifest/
        kompose.image-pull-secret: regcred
        kompose.service.expose: realestate.techprodevops.com
        kompose.service.nodeport.port: "30001"
        kompose.service.type: nodeport
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - env:
            - name: AUTH_SECRET
              value: ' your-strong-secret-key-here-32-characters-minimum'
            - name: NEXT_PUBLIC_API_URL
              value: http://true-roots-backend:8090
            - name: PORT
              value: "80"
          image: IMAGE_TAG_UI
          name: frontend
          ports:
            - containerPort: 80
              protocol: TCP
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
