Devops/Internship-Project/Task-4-Solution/kub_manifest/true-roots-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o ../kub_manifest/
    kompose.image-pull-secret: regcred
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: true-roots-backend
  name: true-roots-backend
spec:
  ports:
    - name: "8090"
      port: 8090
      targetPort: 8090
  selector:
    io.kompose.service: true-roots-backend
